# kwait

./: Justfile  README.md  flake.nix  pyproject.toml  shell.nix
.github/workflows/: ci.yaml
kwait/: __init__.py  cli.py  drivers.py  exceptions.py  inventory.py  wait.py
test/: conftest.py  test_cli.py  test_drivers.py  test_inventory.py  test_noop.py  test_wait.py  utils.py
typings/kubernetes/client/: __init__.pyi
